Changing database/column, adding update operation on category